# ophix-lang-fr-docs

./: README.md  gen_version.py  pyproject.toml
src/ophix_lang_fr_docs/: _version.py  apps.py
src/ophix_lang_fr_docs/docs/: ophix_docs.md  sections.yaml
src/ophix_lang_fr_docs/locale/fr/LC_MESSAGES/: django.mo  django.po
